--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_bloc: ^8.1.3
+  modal_progress_hud_nsn: ^0.4.0
 
 dev_dependencies:
   hive_generator: ^2.0.0
