--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   modal_progress_hud_nsn: ^0.4.0
   intl: ^0.18.1
+  animations: ^2.0.8
 
 dev_dependencies:
   hive_generator: ^2.0.0
